<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FreeKeys</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pagina_principal">PaginaPrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="create_new_post">Create new post</string>
    <string name="post_title">Post title</string>
    <string name="content">Content</string>
    <string name="tags">Tags</string>
    <string name="publish">PUBLISH</string>
    <string name="save">Save</string>
    <string name="display_name_optional">Display name (optional)</string>
    <string name="shown_on_your_profile_page">Shown on your profile page</string>
    <string name="email">Email:</string>
    <string name="your_email_address">Your email address</string>
    <string name="about_optional">About (optional)</string>
    <string name="a_little_description_of_yourself">A little description of yourself</string>
    <string name="welcome_to_the_community">Welcome to the community</string>
    <string name="forum">forum</string>
    <string name="create">CREATE</string>
    <string name="titulo">Titulo</string>
    <string name="a_o">Año</string>
    <string name="plataforma">Plataforma</string>
    <string name="insertar">INSERTAR</string>
    <string name="general">General</string>
    <string name="reviews">Reviews</string>
    <string name="description">Description</string>
    <string name="release_date">Release date:</string>
    <string name="developer">Developer:</string>
    <string name="platform">Platform:</string>
    <string name="get_the_game">GET THE GAME</string>
    <string name="popular">Popular</string>
    <string name="welcome" tools:ignore="DuplicateDefinition">Welcome</string>
    <string name="join_our_community" tools:ignore="DuplicateDefinition">Join our community</string>
    <string name="username" tools:ignore="DuplicateDefinition">Username</string>
    <string name="pass" tools:ignore="DuplicateDefinition">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="comments">Comments</string>
    <string name="type_your_comment">Type your comment</string>
    <string name="warren" tools:ignore="DuplicateDefinition">Wade Warren</string>
    <string name="edit" tools:ignore="DuplicateDefinition">edit</string>
    <string name="posts">Posts</string>
    <string name="no_posts_yet">No posts yet</string>
    <string name="about" tools:ignore="DuplicateDefinition">About</string>
    <string name="name_wade">Name: Wade</string>
    <string name="surname_warren">Surname: Warren</string>
    <string name="email_warren_outlook_com">Email: warren@outlook.com</string>
    <string name="about_me_gaming_reading">About me: Gaming, reading</string>
    <string name="write_a_review_about_it">Write a review about it</string>
    <string name="tell_us_what_you_think">Tell us what you think</string>
    <string name="write_about_the_game">Write about the game</string>
    <string name="would_you_recommend_this_offer">Would you recommend this offer?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="wade_warren">Wade Warren</string>
    <string name="saved"><![CDATA[> Saved]]></string>
    <string name="search">Search</string>
    <string name="view_options">VIEW OPTIONS</string>
    <string name="dark_mode_by_default">Dark mode by default</string>
    <string name="advanced">ADVANCED</string>
    <string name="community_thumbnails">Community thumbnails</string>
    <string name="dark_mode">DARK MODE</string>
    <string name="default_comment_sort">Default comment sort</string>
    <string name="default_view">Default view</string>
    <string name="open_links_in_app">Open links in app</string>
    <string name="show_adult_games">Show adult games</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="plat">Plat:</string>
    <string name="tag">Tag:</string>
    <string name="title">Title:</string>
</resources>