<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.proyecto.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.proyecto.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.proyecto.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.proyecto.ui.profile.ProfileFragment"
        android:label="fragment_nav_profile"
        tools:layout="@layout/fragment_nav_profile" >
        <action
            android:id="@+id/action_nav_profile_to_nav_profile_about"
            app:destination="@id/nav_profile_about" />
    </fragment>
    <fragment
        android:id="@+id/nav_profile_about"
        android:name="com.example.proyecto.ProfileAboutFragment"
        android:label="fragment_nav_profile_about"
        tools:layout="@layout/fragment_nav_profile_about" >
        <action
            android:id="@+id/action_nav_profile_about_to_nav_profile"
            app:destination="@id/nav_profile" />
    </fragment>
</navigation>