<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#222121"
    tools:context=".CreatePostFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/create_new_post"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:text="@string/post_title"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="204dp"
        android:background="@drawable/roundedbutton"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="268dp"
        android:text="@string/content"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="298dp"
        android:layout_height="153dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="324dp"
        android:background="@drawable/roundedbutton"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="496dp"
        android:text="@string/tags"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="552dp"
        android:background="@drawable/roundedbutton"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="628dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/publish"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="#00D1FF"/>
</androidx.constraintlayout.widget.ConstraintLayout>