<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222121"
    tools:context=".SignUpFragment">

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/whitearrow"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcometext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="152dp"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/jointext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="92dp"
        android:text="@string/join_our_community"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcometext" />

    <TextView
        android:id="@+id/usertext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="264dp"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jointext"
        app:layout_constraintBottom_toTopOf="@id/useredit"/>

    <EditText
        android:id="@+id/useredit"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/roundedbutton"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usertext"
        app:layout_constraintBottom_toTopOf="@id/passtext"/>

    <TextView
        android:id="@+id/passtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="264dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/useredit"
        app:layout_constraintBottom_toTopOf="@id/passedit"/>

    <EditText
        android:id="@+id/passedit"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/roundedbutton"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passtext"
        app:layout_constraintBottom_toTopOf="@id/confirmtext"/>


    <TextView
        android:id="@+id/confirmtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="188dp"
        android:text="@string/confirm_password"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passedit"
        app:layout_constraintBottom_toTopOf="@id/confirmedit"/>

    <EditText
        android:id="@+id/confirmedit"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/roundedbutton"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmtext"
        app:layout_constraintBottom_toTopOf="@id/signUp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUp"
        android:layout_width="140dp"
        android:layout_height="wrap_content"

        android:background="@drawable/roundedbutton"
        android:backgroundTint="#00D1FF"
        android:text="SIGN UP"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/or"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmedit" />

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="or"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/signUp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/google"/>

    <com.developer.gbuttons.GoogleSignInButton
        android:id="@+id/google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/google_sign_up"
        app:isDarkTheme="true"
        app:layout_constraintTop_toBottomOf="@id/or"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>